--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,23 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
-inputs:
-  myInput:              # change this
-    description: 'input description here'
-    default: 'default value if applicable'
-runs:
-  using: 'node12'
-  main: 'dist/index.js'
+# GitHub action to verify all status checks complete successfully
+
+After installation this action will iterate through all of your checks and pass if all your other checks pass.
+
+## Installation
+
+To configure the action add the following lines to your `.github/workflows/rebase.yml` workflow file:
+
+```yml
+on: check_run_completed
+name: Check Run
+jobs:
+  checkForSuccess:
+    name: Success Check
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check
+      uses: arup-group/action-all-checks-passed@master
+      with:
+        runId: ${{ github.run_id }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+```
